--- a/binance.service
+++ b/binance.service
@@ -4,7 +4,7 @@ Description=Binance Screener App
 [Service]
 ExecStart=/var/www/screener/app.js
 Restart=always
-User=nobody
+User=nogroup
 # Note Debian/Ubuntu uses 'nogroup', RHEL/Fedora uses 'nobody'
 Group=nogroup
 Environment=PATH=/usr/bin:/usr/local/bin
